examples/invalid/ns/hello_nested_mod_invalid.ns
mod cpu Main {
  fn main() {
    mod shader SurfaceShader {
      fn shade() {
        print(1);
      }
    }

    print(1);
  }
}
